# log4z

./: .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  HISTORY  README.md  biicode.conf  log4z.cpp  log4z.h  make.bat  make.sh  make_win32.bat
doc/: log4z_chs.doc  log4z_en.doc
g++/: CMakeLists.txt
project/: advanced_test.cpp  advanced_test.sln  advanced_test.vcproj  config.cfg  config.xml  fast_test.cpp  fast_test.sln  fast_test.vcproj  makefile  stress_test  stress_test.cpp  stress_test.sln  stress_test.vcproj
test/: advanced_test.cpp  fast_test.cpp  makefile  stress_test.cpp
test/travis/: env.sh  setup.sh
vc2005/: advanced_test.vcproj  fast_test.vcproj  log4z.vcproj  project.sln  stress_test.vcproj
vc2015/: advanced_test.vcxproj  fast_test.vcxproj  log4z.vcxproj  project.sln  stress_test.vcxproj
